<resources>
    <string name="app_name">Job</string>
    <string name="app_id">408956192824238</string>


    <!--Sliding Menu-->
    <string name="profile_txt">Profile</string>
    <string name="search_conidates_txt">Search Candidates</string>
    <string name="notification_txt">Notification</string>
    <string name="about_us_txt">About Us</string>
    <string name="change_password_txt">Change Password</string>
    <string name="privacy_policy_txt">Privacy Policy</string>
    <string name="terms_conditions_txt">Terms &amp; Conditions</string>
    <string name="logout_txt">Logout</string>

</resources>
