<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:background="@color/colorAccent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="479dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                >

                <LinearLayout
                    android:id="@+id/profileLayout"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="45sp">

                    <ImageView
                        android:layout_marginLeft="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/person_black"
                        android:id="@+id/imageView5"
                        />

                    <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="10sp"
                        android:textColor="#000000"
                        android:text="@string/profile_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/searchLayout"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="45sp">

                    <ImageView
                        android:layout_marginLeft="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/search"
                        />

                    <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="10sp"
                        android:textColor="#000000"
                        android:text="@string/search_conidates_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/notificationLayout"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="45sp">

                    <ImageView
                        android:layout_marginLeft="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/notifications"
                        />

                    <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="10sp"
                        android:textColor="#000000"
                        android:text="@string/notification_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/aboutusLayout"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="45sp">

                    <ImageView
                        android:layout_marginLeft="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/about_us"
                        />

                    <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="10sp"
                        android:textColor="#000000"
                        android:text="@string/about_us_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/change_passwordLayout"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="45sp">

                    <ImageView
                        android:layout_marginLeft="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/password"
                        />

                    <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="10sp"
                        android:textColor="#000000"
                        android:text="@string/change_password_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/privacyPolicyLayout"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="45sp">

                    <ImageView
                        android:layout_marginLeft="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/assignment"
                        />

                    <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="10sp"
                        android:textColor="#000000"
                        android:text="@string/privacy_policy_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/termsLayout"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="45sp">

                    <ImageView
                        android:layout_marginLeft="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/terms"
                        />

                    <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="10sp"
                        android:textColor="#000000"
                        android:text="@string/terms_conditions_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/logoutLayout"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="45sp">

                    <ImageView
                        android:layout_marginLeft="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logout"
                        />

                    <TextView
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginLeft="10sp"
                        android:textColor="#000000"
                        android:text="@string/logout_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5sp"
                    android:background="@color/white"/>





            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="130sp"
            android:layout_height="130sp"
            android:src="@drawable/user"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView3"
            app:civ_border_width="2sp"
            app:civ_border_color="@color/colorAccent"/>

        <TextView
            android:id="@+id/userNameTxt"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANDIDATE NAME"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


</RelativeLayout>